# src/models/User.ts
@@ -1,6 +1,8 @@
-import { Column, CreateDateColumn, Entity, PrimaryGeneratedColumn, UpdateDateColumn } from 'typeorm';
+import { Column, CreateDateColumn, Entity, PrimaryGeneratedColumn, UpdateDateColumn, ManyToMany, JoinTable, OneToMany } from 'typeorm';
 
+import { Classroom } from './Classroom';
 import { Role } from './enums';
+import { StudentParent } from './StudentParent';
 
 @Entity()
 export class User {
@@ -16,11 +18,29 @@ export class User {
     @Column({ nullable: true })
     lastName?: string;
 
+    @Column({ nullable: true })
+    address?: string;
+
+    @Column({ nullable: true })
+    phone?: string;
+
     @Column('enum', { enum: Role })
     role!: Role;
 
     @Column({ nullable: true })
     hashedPassword?: string;
+
+    @ManyToMany(() => Classroom, { onDelete: 'CASCADE' })
+    @JoinTable({ name: 'classroom_user' })
+    classrooms!: Classroom[];
+
+    @OneToMany(() => StudentParent, studentParent => studentParent.student)
+    @JoinTable({ name: 'student_parent' })
+    students!: User[];
+
+    @OneToMany(() => StudentParent, studentParent => studentParent.parent)
+    @JoinTable({ name: 'student_parent' })
+    parents!: User[];
 
     @CreateDateColumn()
     createdAt!: Date;
